# django-cacheback

./: .editorconfig  .gitignore  .python-version  .readthedocs.yml  .travis.yml  AUTHORS  CHANGELOG.rst  LICENSE  MANIFEST.in  Makefile  README.rst  TODO  Vagrantfile  makefile  pyproject.toml  requirements.txt  runtests.py  sandbox_requirements.txt  setup.cfg  setup.py  test_requirements.txt  tox.ini
.github/workflows/: test.yml
async_cache/: __init__.py  base.py  jobs.py  queryset.py  tasks.py
cacheback/: __init__.py  apps.py  base.py  conf.py  decorators.py  function.py  jobs.py  queryset.py  rq_tasks.py  tasks.py  utils.py
cacheback/templatetags/: cacheback.py
docs/: Makefile  advanced.rst  api.rst  conf.py  contributing.rst  index.rst  installation.rst  settings.rst  usage.rst
sandbox/: Procfile.celery  Procfile.rq  __init__.py  celeryconfig.py  fixture.json  provision.sh  requirements.txt  settings.py  urls.py  wsgi.py
sandbox/dummyapp/: jobs.py  models.py  views.py
sandbox/dummyapp/migrations/: 0001_initial.py
sandbox/dummyapp/templates/: index.html
sandbox/puppet/manifests/: default.pp  site.pp
sandbox/puppet/modules/rabbitmq/: CHANGELOG  Modulefile  README.md  metadata.json
sandbox/puppet/modules/rabbitmq/lib/puppet/provider/rabbitmq_plugin/: default.rb  rabbitmqplugins.rb
sandbox/puppet/modules/rabbitmq/lib/puppet/provider/rabbitmq_user/: default.rb  rabbitmqctl.rb
sandbox/puppet/modules/rabbitmq/lib/puppet/provider/rabbitmq_user_permissions/: default.rb  rabbitmqctl.rb
sandbox/puppet/modules/rabbitmq/lib/puppet/provider/rabbitmq_vhost/: default.rb  (+1 more)
sandbox/puppet/modules/rabbitmq/lib/puppet/type/: rabbitmq_user.rb  rabbitmq_user_permissions.rb
sandbox/puppet/modules/rabbitmq/manifests/: server.pp  service.pp
sandbox/puppet/modules/rabbitmq/manifests/repo/: apt.pp
sandbox/puppet/modules/rabbitmq/templates/: rabbitmq-env.conf.erb  rabbitmq.config
sandbox/puppet/modules/rabbitmq/tests/: full.pp  plugin.pp  server.pp
sandbox/puppet/modules/rabbitmq/tests/permissions/: add.pp
sandbox/puppet/modules/rabbitmq/tests/user/: add.pp
sandbox/puppet/modules/stdlib/: CHANGELOG  Modulefile  metadata.json
sandbox/puppet/modules/stdlib/lib/puppet/type/: file_line.rb
sandbox/puppet/modules/stdlib/spec/: spec_helper.rb
tests/: async_tests.py  celery.py  conftest.py  decorator_tests.py  job_tests.py  queryset_tests.py  settings.py  test_base_job.py  test_decorators.py  test_jobs.py  test_utils.py  tests.py
tests/dummyapp/: models.py
(+64 files in other folders)
