[tool.poetry]
name = "django-cacheback"
version = "3.0.0"
description = "Caching library for Django that uses Celery or RQ to refresh cache items asynchronously"
authors = [
	"David Winterbottom <david.winterbottom@gmail.com>",
	"Stephan Jaekel <steph@rdev.info>",
	"Flávio Juvenal (@fjsj)",
	"Michael Kutý",
]
license = "MIT"
readme = "README.rst"
homepage = 'https://github.com/codeinthehole/django-cacheback'
repository = 'https://github.com/codeinthehole/django-cacheback'
keywords = ["flake8", "markdown", "lint"]
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"License :: OSI Approved :: MIT License",
	"Environment :: Web Environment",
	"Framework :: Django",
	"Intended Audience :: Developers",
	"Operating System :: Unix",
	"Programming Language :: Python",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3.6",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
]
packages = [{ include = "cacheback" }]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = ">=3.6,<4"
importlib-metadata = {version = "*", python = "<3.8"}

django = ">=2"
celery = {version = ">=4", optional = true}
django-rq = {version = ">=2", optional = true}
Sphinx = {version = ">=3.3.0,<4", optional = true}

[tool.poetry.dev-dependencies]
pytest = ">=6.0"
pytest-django = ">=4.1"
pytest-cov = ">=2.10"
pytest-isort = ">=1.2"
pytest-flake8 = ">=1.0"
pytest-black = ">=0.3"
freezegun = ">=1.0"
coverage = {version = ">=5.0", extras = ["toml"]}
celery = ">=4"
django-rq = ">=2"

[tool.poetry.extras]
celery = ["celery"]
rq = ["django-rq"]
docs = ["Sphinx"]

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
addopts = "-v --nomigrations"
testpaths = ["cacheback", "tests"]
markers = [
	"redis_required: Tests that require a running redis-server instance"
]
flake8-max-line-length = 96
flake8-ignore = ["E203", "E266", "E501", "W503"]
flake8-max-complexity = 18
DJANGO_SETTINGS_MODULE = "tests.settings"

[tool.black]
line-length = 96
skip-string-normalization = true
skip-numeric-underscore-normalization = true
include = "\\.pyi?$"
exclude = "/(\\.git|\\.tox|build|dist)/"

[tool.coverage.run]
branch = true
source = ["cacheback"]

[tool.coverage.report]
exclude_lines = ["raise NotImplementedError"]
